add country attendance route
