# src/controllers/countryDataController.ts
@@ -1,6 +1,7 @@
 import { Controller, Get, Path, Route } from 'tsoa';
 
-import type { CountryDetailRow, CountryId } from '../models/countryData';
+import type { GamesId } from '../models/gamesData';
+import type { CountryAttendanceRow, CountryDetailRow, CountryId } from '../models/countryData';
 import { CountryDataService } from '../services/countryDataService.js';
 
 @Route('countries')
@@ -13,5 +14,10 @@ export class CountryDataController extends Controller {
 	@Get('{country}')
 	public async getCountry(@Path() country: CountryId): Promise<CountryDetailRow | null> {
 		return new CountryDataService().get(country);
+	}
+
+	@Get('games/{game}')
+	public async getCountryAttendance(@Path() game: GamesId): Promise<CountryAttendanceRow | null> {
+		return new CountryDataService().getAttendance(game);
 	}
 }
